# beautyboot

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
beautyboot/: DOC.md  __main__.py  beautyboot_conf.py  helpers.py  youtube.py
customizer/: customizer_config.py  main.py
templates/: template.plymouth
