[tool.poetry]
name = "bootupscreen-customizer"
version = "0.1.0"
description = "A simple tool to customize your bootupscreen on unix-systems using plymouth"
authors = ["protogia"]

[tool.poetry.dependencies]
python = "^3.8.1"
opencv-python = "^4.5.3"
rich-argparse = "^1.4.0"
inquirerPy = "^0.3.4 "
flake8 = "^7.0.0"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
