[tool.poetry]
name = "beautyboot"
version = "0.1.0"
description = "A simple tool to customize your bootupscreen on unix-systems using plymouth"
authors = ["protogia"]
packages = [
    { include = "beautyboot" },
]


[tool.poetry.dependencies]
python = "^3.8.1"
opencv-python = "^4.5.3"
rich-argparse = "^1.4.0"
flake8 = "^7.0.0"
inquirer = "^3.2.1"
argcomplete = "^3.2.1"
toml = "^0.10.2"
alive-progress = "^3.1.5"
pytube = "^15.0.0"
moviepy = "^1.0.3"
pretty_errors = "1.2.25"

[tool.black]
line-length = 88

[project]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = "^3.8.1"
#license = {file = "LICENSE"}

[project.scripts]
beautyboot = "beautyboot.__main__"

[tool.poetry.plugins] # Optional super table
[tool.poetry.plugins."beautyboot"]
beautyboot = "beautyboot.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
